Uml and small fixes